--- a/package.json
+++ b/package.json
@@ -21,23 +21,32 @@
     "@mui/material": "^5.16.4",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.6",
+    "@stomp/stompjs": "^7.0.0",
     "antd": "^5.19.3",
     "antd-img-crop": "^4.22.0",
     "axios": "^1.7.2",
     "ckeditor5": "^43.0.0",
+    "compromise": "^14.14.3",
     "dayjs": "^1.11.12",
     "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
+    "natural": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icon": "^1.0.0",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
+    "react-slick": "^0.30.3",
     "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0"
+    "redux-thunk": "^3.1.0",
+    "slick-carousel": "^1.8.1",
+    "sockjs-client": "^1.6.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
